# PhyHPD

./: CMakeLists.txt  qtquickcontrols2.conf  reminder.md  resources.qrc
dataSrc/: pseudoSampleReport.json
qml/: ChartExpData.qml  Charts.qml  CustomChart.qml  DataWindow.qml  Experimental.qml  Graphs.qml  Mnemo.ui.qml  Parameters.qml  Results.qml  SampleLoader.qml  SettingsDialog.qml  main.qml  settings.qml
qml/mnemo/: Mnemo.ui.qml
src/: chartmodel.cpp  chartmodel.h  controller.cpp  controller.h  customplotitem.cpp  customplotitem.h  datacollection.cpp  datacollection.h  datamodel.cpp  datamodel.h  demodata.cpp  demodata.h  expcalc.cpp  expcalc.h  expdatactrl.cpp  expdatactrl.h  expstructures.h  exptable.cpp  exptable.h  jsonloader.cpp  jsonloader.h  main.cpp  mainwindow.cpp  mainwindow.h  mnemostate.cpp  mnemostate.h  settingsdialog.cpp  settingsdialog.h  writelogfile.cpp  writelogfile.h
